seeqt/QtWidgets/gen_qscrollerproperties.h

class QScrollerProperties;
class QVariant;
typedef struct QScrollerProperties QScrollerProperties;
typedef struct QVariant QVariant;
QScrollerProperties* QScrollerProperties_new();
QScrollerProperties* QScrollerProperties_new2(QScrollerProperties* sp);
void QScrollerProperties_operatorAssign(QScrollerProperties* self, QScrollerProperties* sp);
bool QScrollerProperties_operatorEqual(const QScrollerProperties* self, QScrollerProperties* sp);
bool QScrollerProperties_operatorNotEqual(const QScrollerProperties* self, QScrollerProperties* sp);
void QScrollerProperties_setDefaultScrollerProperties(QScrollerProperties* sp);
void QScrollerProperties_unsetDefaultScrollerProperties();
QVariant* QScrollerProperties_scrollMetric(const QScrollerProperties* self, int metric);
void QScrollerProperties_setScrollMetric(QScrollerProperties* self, int metric, QVariant* value);
void QScrollerProperties_delete(QScrollerProperties* self);